--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,8 @@
 [phases.setup]
-nixPkgs = ["...", "libreoffice-headless"] # Ajoute LibreOffice au système
+nixPkgs = ["python3", "libreoffice-headless"]
 
+[phases.build]
+cmds = ["pip install -r requirements.txt"]
+
+[start]
+cmd = "python main.py"
