--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,5 @@
 [phases.setup]
-nixPkgs = ["python3", "libreoffice-headless"]
+nixPkgs = ["python3", "libreoffice", "libreoffice-headless"]
 
 [phases.build]
 cmds = ["pip install -r requirements.txt"]
-
-[start]
-cmd = "python main.py"
